--- a/composer.json
+++ b/composer.json
@@ -23,13 +23,13 @@
     "require": {
         "heavenproject/utils": "^1.0",
         "kdyby/console": "^2.4",
-        "kdyby/doctrine": "^2.3",
+        "kdyby/doctrine": "^2.3 | ^3.0",
         "nette/di": "^2.3",
         "tracy/tracy": "^2.3"
     },
     "require-dev": {
         "kdyby/annotations": "^2.2",
-        "kdyby/events": "^2.4",
+        "kdyby/events": "^2.4 | ^3.0",
         "mockery/mockery": "~0.9.0",
         "nette/bootstrap": "^2.3",
         "nette/tester": "*"
